--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ nav{
     width: 100%;
     padding:50px;
     font-size: larger;
-    background-color: aquamarine
+    background-color: red;
     ;
 }
 
